# agent-dash

./: Cargo.toml  LICENSE  README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/agentdash/app/: MainActivity.kt
android/app/src/main/java/com/agentdash/app/crypto/: CryptoBox.kt
android/app/src/main/java/com/agentdash/app/model/: Protocol.kt
android/app/src/main/java/com/agentdash/app/network/: RelayConnection.kt
android/app/src/main/java/com/agentdash/app/ui/: Navigation.kt
android/app/src/main/java/com/agentdash/app/ui/chat/: ChatScreen.kt
android/app/src/main/java/com/agentdash/app/ui/pair/: PairScreen.kt
android/app/src/main/java/com/agentdash/app/ui/sessions/: SessionListScreen.kt
android/app/src/main/java/com/agentdash/app/ui/theme/: Theme.kt
android/app/src/main/java/com/agentdash/app/viewmodel/: MainViewModel.kt
android/app/src/main/res/values/: strings.xml  themes.xml
crates/agent-dash/: Cargo.toml
crates/agent-dash-core/: Cargo.toml
crates/agent-dash-core/src/: lib.rs  paths.rs  protocol.rs  relay.rs  session.rs
crates/agent-dash-hook/: Cargo.toml
crates/agent-dash-hook/src/: main.rs
crates/agent-dash-relay/: Cargo.toml
crates/agent-dash-relay/src/: channel.rs  main.rs  server.rs
crates/agent-dash/src/: cli.rs  client_listener.rs  daemon.rs  hook_cmd.rs  hook_listener.rs  jsonl.rs  main.rs  messages.rs  relay_connector.rs  scanner.rs  setup.rs  state.rs  web.rs  wrapper.rs
crates/agent-dash/src/agents/: claude.rs  codex.rs  copilot.rs  mod.rs
crates/agent-dash/web/: app.js  index.html  style.css
crates/agent-dashd/: Cargo.toml
crates/agent-dashd/src/: client_listener.rs  lib.rs  main.rs  messages.rs  scanner.rs  state.rs  watcher.rs
crates/agentctl/: Cargo.toml
crates/agentctl/src/: main.rs
docs/: relay.md
docs/plans/: 2026-02-12-agent-dash-design.md  2026-02-12-agent-dash-implementation.md  2026-02-12-gnome-extension-pivot.md  2026-02-13-extension-ux-improvements-design.md  2026-02-13-hook-driven-status-design.md  2026-02-13-hook-driven-status-implementation.md  2026-02-14-daemon-architecture-redesign.md  2026-02-14-daemon-reimplementation-plan.md  2026-02-15-message-api-design.md  2026-02-15-message-api-implementation.md  2026-02-15-single-binary-design.md  2026-02-15-single-binary-implementation.md  2026-02-25-web-interface-design.md  2026-02-25-web-interface-implementation.md  2026-02-25-wrapper-driven-sessions-design.md  2026-02-25-wrapper-driven-sessions-implementation.md  2026-02-27-terminal-resize-design.md  2026-02-28-mobile-sidebar-design.md  2026-02-28-mobile-sidebar-implementation.md  2026-02-28-mobile-terminal-keys-design.md  2026-02-28-mobile-terminal-keys-implementation.md
extension/: extension.js  metadata.json  stylesheet.css
hooks/: agent-dash-hook.sh  permission-bridge.sh
src/: app.rs  ipc.rs  main.rs  monitor.rs  session.rs  socket.rs
