[workspace]
members = [
    "crates/agent-dash",
    "crates/agent-dash-core",
    "crates/agent-dashd",
    "crates/agent-dash-hook",
    "crates/agentctl",
]
resolver = "3"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tokio = { version = "1", features = ["full"] }
interprocess = { version = "2", features = ["tokio"] }
sysinfo = "0.34"
notify = "7"
comrak = { version = "0.36", default-features = false }
clap = { version = "4", features = ["derive"] }
portable-pty = "0.9"
crossterm = "0.28"
