[package]
name = "agent-dash-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-dash-core = { path = "../agent-dash-core" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
