[package]
name = "agent-dash"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-dash-core = { path = "../agent-dash-core" }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
interprocess = { workspace = true }
sysinfo = { workspace = true }
notify = { workspace = true }
comrak = { workspace = true }
clap = { workspace = true }
portable-pty = { workspace = true }
crossterm = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
crypto_box = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
qrcode = { workspace = true }
