[package]
name = "agent-dashd"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-dash-core = { path = "../agent-dash-core" }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
interprocess = { workspace = true }
sysinfo = { workspace = true }
notify = { workspace = true }
comrak = { workspace = true }
